Use default variables for gitconfig

--- a/roles/system_setup/templates/gitconfig.jinja2
+++ b/roles/system_setup/templates/gitconfig.jinja2
@@ -1,7 +1,7 @@
 # This is Git's per-user configuration file.
 [user]
-	name = Plamen Delchev
-	email = plamen.delchev@gmail.com
+  name = {{ git_user }}
+	email = {{ git_email }}
 [color]
 	ui = true
 [core]
